<resources>
    <string name="app_name">The Story Writer</string>
    <string name="proceed">Proceed</string>
    <string name="select_layout">Select Template</string>
    <string name="go_for_it">Go For it</string>
    <string name="tap_on_the_image_to_enter_text">Tap on the image to enter text.</string>
    <string name="done">Done</string>
    <string name="Continue"> Save and Continue</string>
    <string name="next">Next</string>
    <string name="image_has_been_saved">Image has been saved.\nInternal Storage > TSW</string>
    <string name="select_template">Select Template</string>
    <string name="back">Continue Editing</string>
</resources>
